[package]
name = "paint"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33" # UI
egui_extras = { version = "0.33", features = ["image"] } # UI Image support
image = "0.25" # Image support
bytemuck = "1.24" # Cast to bytes
smallvec = "1.15" # Vec in stack if len < N
inkwell = { version = "0.8", features = ["llvm20-1"] }

[patch.crates-io]
# Use features that are not published in crates-io.
glow = { git = "https://github.com/grovesNL/glow", rev = "d645b97" }

[features]
default = ["llvm_dynamic"]
llvm_dynamic = ["inkwell/llvm20-1-force-dynamic"]
llvm_static = ["inkwell/llvm20-1-force-static"]

[profile.release]
lto = true
